Added rating button

--- a/app/src/main/res/layout/single_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/single_bottom_sheet_dialog.xml
@@ -95,7 +95,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/createRating"
+            android:id="@+id/giveRating"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
