--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,10 @@
     <color name="colorPrimaryDark">#c6a700</color>
     <color name="windowBackgroundColor">#fffde7</color>
     <color name="colorAccent">#5d4037</color>
+    <color name="colorPrimaryRed">#B32D45</color>
+    <color name="colorPrimaryLightRed">#EF002A</color>
+    <color name="colorPrimaryDarkRed">#9B001C</color>
+    <color name="colorPrimaryGreen">#00CC00</color>
+    <color name="colorPrimaryLightGreen">#67E667</color>
+    <color name="colorPrimaryDarkGreen">#008500</color>
 </resources>
