--- a/app/src/main/res/menu/menu_home_screen.xml
+++ b/app/src/main/res/menu/menu_home_screen.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".presentation.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_change_theme"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_change_theme"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_logout"
