--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,17 @@
         <item name="android:windowSharedElementExitTransition">@transition/change_view_transform</item>
     </style>
 
+    <style name="AppTheme.RED" parent="AppTheme.AppBarOverlay">
+        <item name="colorPrimary">@color/colorPrimaryRed</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDarkRed</item>
+        <item name="colorAccent">@color/colorPrimaryLightRed</item>
+    </style>
+    <style name="AppTheme.GREEN" parent="AppTheme.AppBarOverlay">
+        <item name="colorPrimary">@color/colorPrimaryGreen</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDarkGreen</item>
+        <item name="colorAccent">@color/colorPrimaryLightGreen</item>
+    </style>
+
 
     <style name="DetailsPageTheme" parent="AppTheme">
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
