--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -156,13 +156,13 @@
                             app:layout_constraintTop_toBottomOf="@+id/category" />
 
                         <RatingBar
-                            android:id="@+id/addRatingBar"
+                            android:id="@+id/myRatingBar"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
                             android:layout_marginTop="8dp"
                             android:layout_marginEnd="8dp"
-                            android:isIndicator="false"
+                            android:isIndicator="true"
                             android:numStars="5"
                             android:rating="0"
                             android:stepSize="0.5"
@@ -173,17 +173,17 @@
                             app:layout_constraintTop_toBottomOf="@+id/separator3" />
 
                         <TextView
-                            android:id="@+id/addRatingExplanation"
+                            android:id="@+id/myRatingExplanation"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="16dp"
                             android:layout_marginEnd="8dp"
-                            android:text="Neue Bewertung durch klicken und ziehen hinzufügen"
+                            android:text="Meine Bewertung"
                             android:textSize="10sp"
                             android:textStyle="italic"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/addRatingBar" />
+                            app:layout_constraintTop_toBottomOf="@+id/myRatingBar" />
 
 
                         <View
@@ -194,7 +194,7 @@
                             android:background="#ffeeeeee"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/addRatingExplanation" />
+                            app:layout_constraintTop_toBottomOf="@+id/myRatingExplanation" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
