--- a/app/src/main/res/layout/activity_price.xml
+++ b/app/src/main/res/layout/activity_price.xml
@@ -112,7 +112,7 @@
                     android:text="Menge" />
 
                 <TextView
-                    android:id="@+id/quantity"
+                    android:id="@+id/quantityText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
