--- a/app/src/main/res/layout/fragment_profile_screen.xml
+++ b/app/src/main/res/layout/fragment_profile_screen.xml
@@ -74,7 +74,7 @@
 
 
                 <TextView
-                    android:id="@+id/currencyText"
+                    android:id="@+id/myBeersCount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
