--- a/app/src/main/res/layout/activity_price.xml
+++ b/app/src/main/res/layout/activity_price.xml
@@ -117,7 +117,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginEnd="@dimen/default_margin"
-                    android:text="0" />
+                    android:text="0.33 l"/>
             </LinearLayout>
 
         </LinearLayout>
